// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart Checkout() should return an object with the total and the list of items 1`] = `
{
  "items": [
    {
      "product": {
        "price": 450,
        "title": "Arroz",
      },
      "quantity": 2,
    },
    {
      "product": {
        "price": 500,
        "title": "Feijão",
      },
      "quantity": 1,
    },
  ],
  "total": {
    "amount": 1400,
    "currency": "BRL",
    "precision": 2,
  },
}
`;

exports[`Cart Checkout() should return an object with the total and the list of items when summary is called() 1`] = `
{
  "formatted": "R$14.00",
  "items": [
    {
      "product": {
        "price": 450,
        "title": "Arroz",
      },
      "quantity": 2,
    },
    {
      "product": {
        "price": 500,
        "title": "Feijão",
      },
      "quantity": 1,
    },
  ],
  "total": {
    "amount": 1400,
    "currency": "BRL",
    "precision": 2,
  },
}
`;
